# atavismxi-installer-solid

./: package-lock.json  package.json  vite.config.js
.github/workflows/: tauri-release.yml
src/: App.jsx  index.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AboutItem.jsx  Footer.jsx  Header.jsx  Nav.jsx  OnlineCount.jsx  Recipe.jsx  Theme.jsx
src/components/adventurer/: Adventurer.jsx  AdventurerDetails.jsx  Crafts.jsx  Delete.jsx  Hero.jsx  Jobs.jsx  Nations.jsx
src/components/createAdventurer/: Animate.jsx  CreationForm.jsx  FaceSelection.jsx  JobSelection.jsx  NationSelection.jsx  RaceSelection.jsx  SizeSelection.jsx
src/components/tauri/: Install.jsx  InstallProgress.jsx  Play.jsx  Update.jsx  UpdateGame.jsx  UpdateLauncher.jsx
src/layouts/: BaseLayout.jsx
src/pages/: About.jsx  Account.jsx  Auth.jsx  CreateAdventurer.jsx  Home.jsx  Links.jsx  NotFound.jsx  Player.jsx  Rules.jsx  Support.jsx
src/pages/tools/: Adventuers.jsx  Recipes.jsx
src/providers/: VersionProvider.jsx
src/styles/: global.css
src/styles/components/: aboutItem.css  footer.css  header.css  nav.css  theme.css
src/styles/layouts/: baselayout.css
src/styles/pages/: about.css  (+9 more)
utils/: adventurerConversion.js  adventurerDetails.js  auth.js  consts.js  createAdventurer.js  equipment.js  equipmentConversion.js  faces.js  itemDescriptions.js  races.js  rules.js  search.js  titles.js
utils/install/: downloadGame.js  pickLocation.js  unzipGame.js  updateGame.js
utils/tauri/: installGame.js  updateGame.js
(+26 files in other folders)
